# Heartana

./: .gitignore  CMakeLists.txt  DATALOG.txt  Heartana.ino  Heartana.pro  dialog.ui  logic.cpp  logic.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myapp.rc  patient.h  qcustomplot1.cpp  qcustomplot1.h  registration.cpp  registration.h  registration.ui  resources.qrc  settings.cpp  settings.h  settings.ui
3D modeles/: Button.stl  Case bottom.stl  Case top.stl  Pusher.stl  Strap.stl
Esp32/: axles.h  battery.h  bluetooth.h  esp32.ino  heart.h  lungs.h  rocket.h
